--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <p> 
     <h1> Welcome to my profile. </h1>
       <h5>Hello coders my name is atharv and this is my repository. </h2>
+      Now i had made a new branch and  i am editing this text in new branch. 
     </p>
   </body>
 </html>
