Updated main branch index.html
Added text in main branch index file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <p> 
     <h1> Welcome to my profile. </h1>
       <h5>Hello coders my name is atharv and this is my repository. </h2>
+      <h4>Now i am editing this file in Main branch.</h4>
     </p>
   </body>
 </html>
